[tool.poetry]
name = "deep-learning-codespace"
version = "0.1.0"
description = "Deep Learning Codespace"
authors = ["Fatih Nayebi <f.nayebi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "deep_learning_codespace"}]

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "^2.12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
